--- a/example_deployment.yaml
+++ b/example_deployment.yaml
@@ -1,18 +1,31 @@
+
 deployment:
     Example deployment:
         description: This is an example deployment to test jinja templates:
         input:
             
+
             external_input: {
-                    type: raw_data,
+                type: raw_data,
             }
-            
+
             input_data: {
-                    type: data,
+                type: data,
             }
-            
+
+
         output:
             
+
+            input_data: {
+                type: data,
+            }
+
+            validated_data: {
+                type: data,
+            }
+
+
         functions:
          
          - read_input_data
