If in and output is the same remove them from deployment

--- a/data/functions.yaml
+++ b/data/functions.yaml
@@ -20,4 +20,7 @@ functions:
             validated_data: {
                 type: data
             }
+            state_of_function: {
+                type: error_code
+            }
 
