Even longer example text

--- a/example_deployment.yaml
+++ b/example_deployment.yaml
@@ -1,8 +1,15 @@
 deployment:
     Example deployment:
         description: 
-            This is an example deployment to test jinja templates. This description is
-            intentionally very long to test breaking of text into several lines.
+            This is an example deployment to test Jinja templates. This description is
+            intentionally very long to test breaking of text into several lines. It
+            includes various details and explanations to ensure that the template handles
+            longer text blocks effectively. By adding more content, we can see how the
+            text wraps and whether it maintains readability and structure. This process is
+            crucial for understanding how templates manage and display extensive
+            information without losing format or clarity. Additionally, it helps in
+            identifying any potential issues with text overflow or alignment in the
+            rendered output.
 
         input:
             external_input: {
